@@ -5,6 +5,8 @@ VEGAN DEVEL VERSIONS at http://r-forge.r-project.org/
 Version 1.18-7 (opened June 16, 2010)
 
 	* new version opened with the release of vegan_1.17-3.
+
+	* veganCovEllipse: new internal for drawing covariance ellipses.
 	
 Version 1.18-6 (closed June 16, 2010)
 
